github: enable Go dependency caching
Signed-off-by: quagsirus <quagsirus@catpowered.net>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: stable
+          cache-dependency-path: "**/go.sum"
 
       - name: Fix repository permissions
         run: |
